Fixed alignement on sidemenu (superfish-2)

--- a/sites/all/themes/newmedialab/css/newmedialab.custom.css
+++ b/sites/all/themes/newmedialab/css/newmedialab.custom.css
@@ -569,7 +569,6 @@ li.leaf{
 
 #block-superfish-2{
     padding: 0 0 2em 0;
-    margin-top: 1em;
     border-right: .1em #CCD solid;
 }
 
